# SfmlApp

./: .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE.bazel  dependencies.cmake
bazel/: BUILD.bazel  sfml_extension.bzl
src/: animation.hpp  app_runner.hpp  canvas.hpp  canvas_item.hpp  defs.hpp  ease.hpp  event_handler.hpp  event_handler_t.hpp  functional.hpp  main.cpp  model.hpp  shape_widget.hpp  text_widget.hpp  vec_t.hpp  view.hpp  widget_builders.hpp  widget_impl.h  widget_t.hpp
src/impl/: shape_widget.hpp  sprite_widget.hpp  text_widget.hpp  widget_impl.h
